add an output as "selectedCase"